--- a/stylesheets/scss/_pricing.scss
+++ b/stylesheets/scss/_pricing.scss
@@ -4,7 +4,7 @@
 /* Plan Labels */
 
 #pricing-new {
-
+	
 .bronze,
 .silver,
 .gold,
@@ -20,6 +20,8 @@
 	text-transform: uppercase;
 	@include box-shadow(0 1px 2px rgba(0, 0, 0, .4));
 }
+
+.free     { background-color: #FAEED7; color: #85562C; }
 .bronze   { background-color: #FAEED7; color: #85562C; }
 .silver   { background-color: #EEEEEE; color: #555555; }
 .gold     { background-color: #FFF7B1; color: #7B6E00; }
@@ -223,284 +225,6 @@
 	}
 }
 
-
-	/* Plans */
-
-	$plan-w: 980px / 5;
-
-	.plans-lineup {
-		position: relative;
-		margin: 50px -20px;
-		padding-top: 3.5em;
-
-		&:before,
-		&:after {
-		    content: '';
-		    display: table;
-		}
-		&:after {
-		    clear: both;
-		}
-
-		i.i-leaf {
-			position: absolute;
-			top: 155px;
-			left: -48px;
-		}
-
-		a {
-			border-width: 0 0 1px;
-			border-style: solid;
-			color: inherit;
-			text-decoration: none;
-
-			&:hover {
-				color: #000;
-			}
-		}
-	}
-
-		.plan {
-			@include box-sizing(border-box);
-			position: relative;
-			float: left;
-			width: $plan-w;
-			padding: 2em 25px 1.5em;
-			z-index: 50;
-		}
-
-			.plan-name {
-				position: absolute;
-				top: 0;
-				left: 0;
-				width: 100%;
-				margin: -4px 25px 0;
-
-				.ie8 & {
-					border: 1px solid #FFF;
-				}
-
-				span {
-					vertical-align: top;
-				}
-			}
-			.plan-price {
-				margin: 0 0 1em;
-				text-transform: uppercase;
-
-				strong {
-					margin-right: .15em;
-					font-size: 1.64em; // 21px
-				}
-			}
-			.plan-signup {
-				margin: 1.2em 0 1.5em;
-			}
-			.plan-includes {
-				margin: 0;
-				padding: 0;
-				font-size: 1.0938em; // 14px
-
-				li {
-					margin: 0 0 .4em;
-					list-style: none;
-				}
-			}
-				.link-custom-plans {
-					margin: 0 0 -1.3em;
-				}
-				abbr.title {
-					border: 0;
-				}
-				.slash {
-					margin: 0 .15em 0 .25em;
-				}
-
-
-			.plans-message {
-				clear: both;
-				margin: 0 25px;
-				padding: .5em 0 2em;
-				font-weight: bold;
-
-				p {
-					margin: 0 0 .8em;
-				}
-			}
-				.plan-extra {
-					margin: 0;
-					padding: 0;
-					font-weight: normal;
-					text-align: left;
-
-					li {
-						margin: 0 0 .4em;
-						list-style: none;
-
-						&:last-child {
-							margin-bottom: 0;
-						}
-						&:before {
-							content: '';
-							display: inline-block;
-							width:  10px;
-							height: 10px;
-							margin-right: .4em;
-							background: image-url('i-extra.svg') no-repeat;
-							background-size: 10px 10px;
-
-							.no-svg & {
-								background-image: image-url('i-extra.png');
-							}
-						}
-					}
-				}
-
-
-		// Personal plans
-
-		.plans-personal-wrap {
-			position: relative;
-			float: left;
-			width: $plan-w * 2;
-			@include border-radius(4px 0 0 4px);
-			background-color: #F4F4F4;
-			background-color: rgba(#E9E9E9, .5);
-			color: #8A8A8A;
-
-			a {
-				border-color: mix(#8A8A8A, #F4F4F4, 40%);
-				border-color: rgba(#8A8A8A, .40);
-			}
-			a:hover {
-				border-color: #8A8A8A;
-			}
-
-			.plan--shadowed {
-				background-image: -webkit-gradient(radial, 50%, 0, 50%, 100, color-stop(0%, #e0e0e0), color-stop(100%, rgba(245, 245, 245, 0)));
-				background-image: -webkit-radial-gradient(center, 6px 50%, #e0e0e0, rgba(245, 245, 245, 0));
-				background-image: -moz-radial-gradient(center, 6px 50%, #e0e0e0, rgba(245, 245, 245, 0));
-				background-image: -o-radial-gradient(center, 6px 50%, #e0e0e0, rgba(245, 245, 245, 0));
-				background-image: -ms-radial-gradient(center, 6px 50%, #e0e0e0, rgba(245, 245, 245, 0));
-				background-image: radial-gradient(center, 6px 50%, #e0e0e0, rgba(245, 245, 245, 0));
-				background-size: 12px 100%;
-				background-repeat: no-repeat;
-				background-position: ($plan-w - 6px) 50%;
-			}
-
-			.plan-price,
-			.plans-message,
-			.plan-includes strong {
-				color: #4F4F4F;
-			}
-				.plan-price strong {
-					color: #292929;
-				}
-		}
-
-
-		// Business plans
-
-		.plans-business-wrap {
-			$offset: 8px;
-
-			position: relative;
-			float: right;
-			width: $plan-w * 3;
-			margin-top: -$offset;
-			padding-top: $offset;
-			padding-bottom: $offset;
-			@include border-radius(5px);
-			background-color: #EEEEF9;
-			@include linear-gradient(#F0F0FA 0%, #DFDFF2 100%);
-			color: #77778C;
-			z-index: 100;
-			@include box-shadow(0 2px 4px 0 rgba(76, 76, 102, .50));
-
-			&:before {
-				content: '';
-				position: absolute;
-				top: 3px;
-				right: 3px;
-				bottom: 3px;
-				left: 3px;
-				border: 2px solid #FFF;
-				@include border-radius(4px);
-				z-index: -1;
-			}
-
-			a {
-				border-color: mix(#77778C, #FAFAFF, 40%);
-				border-color: rgba(#77778C, .40);
-			}
-			a:hover {
-				border-color: #77778C;
-			}
-
-			.plan--shadowed {
-				background-image: -webkit-gradient(radial, 50%, 0, 50%, 100, color-stop(0%, rgba(218, 218, 235, 0.8)), color-stop(100%, rgba(218, 218, 235, 0)));
-				background-image: -webkit-radial-gradient(center, 6px 50%, rgba(218, 218, 235, 0.8), rgba(218, 218, 235, 0));
-				background-image: -moz-radial-gradient(center, 6px 50%, rgba(218, 218, 235, 0.8), rgba(218, 218, 235, 0));
-				background-image: -o-radial-gradient(center, 6px 50%, rgba(218, 218, 235, 0.8), rgba(218, 218, 235, 0));
-				background-image: -ms-radial-gradient(center, 6px 50%, rgba(218, 218, 235, 0.8), rgba(218, 218, 235, 0));
-				background-image: radial-gradient(center, 6px 50%, rgba(218, 218, 235, 0.8), rgba(218, 218, 235, 0));
-				background-size: 12px 100%;
-				background-repeat: no-repeat;
-				background-position: -6px 50%;
-			}
-
-			.plan-name {
-				top: -$offset;
-			}
-			.plan-price,
-			.plans-message,
-			.plan-includes strong {
-				color: #575766;
-			}
-				.plan-price strong {
-					color: #292933;
-				}
-		}
-
-
-		// Trial
-
-		.plans-tryout {
-			@include box-sizing(border-box);
-			float: left;
-			width: 390px;
-			padding: 40px 40px 0;
-			color: #888;
-			text-align: center;
-			line-height: 1.4;
-
-			p {
-				margin: 0;
-			}
-		}
-
-
-	/* Plans group title */
-
-	.plans-group {
-		position: absolute;
-		top: 0;
-		margin: 0;
-		text-align: center;
-		font-weight: bold;
-		font-size: 1.1718em;
-	}
-		.plans-personal {
-			left: 0;
-			width: $plan-w * 2 - 3px;
-		}
-
-		.plans-business {
-			right: 0;
-			width: $plan-w * 3 - 3px;
-		}
-
-
 	/* Trial */
 
 	.trial-signup {
@@ -547,8 +271,6 @@
 
 	}
 }
-
-
 
 /* Customers Showcase */
 
@@ -660,4 +382,3 @@ $customers-bg: mix($c-brown-dark, $c-brown, 80%);
 		width: 60px;
 		background-position: -(85px + 125px + 90px + 103px + 98px + 71px) 0;
 	}
-
