--- a/stylesheets/scss/_pricing.scss
+++ b/stylesheets/scss/_pricing.scss
@@ -1,6 +1,16 @@
 /* Pricing
 ============================== */
 
+/* Plans layout */
+
+.plans {
+	display: inline-block;
+	margin: 0;
+	padding: 0;
+	width: 50%;
+}
+
+
 /* Plan Labels */
 
 #pricing-new {
@@ -213,6 +223,7 @@
 	h1 {
 		color: #000;
 		font-size: 30px;
+		font-weight: normal;
 	}
 	h2 {
 		margin-top: .2em;
@@ -225,20 +236,6 @@
 		}
 	}
 }
-
-	/* Trial */
-
-	.trial-signup {
-		margin: 50px 0;
-		text-align: center;
-
-		p {
-			display: block;
-			margin-top: 1.25em;
-			color: #7A7A7A;
-		}
-	}
-
 
 	/* Features List */
 
