Move business plan features markup

--- a/stylesheets/global.css
+++ b/stylesheets/global.css
@@ -727,10 +727,15 @@ footer #help small,
 ============================== */
 /* Plans layout */
 .plans {
+  float: left;
   display: inline-block;
   margin: 0;
   padding: 0;
   width: 50%; }
+  .plans:after {
+    content: "";
+    display: table;
+    clear: both; }
 
 /* Plan Labels */
 #pricing-new {
