--- a/stylesheets/scss/_pricing.scss
+++ b/stylesheets/scss/_pricing.scss
@@ -4,10 +4,16 @@
 /* Plans layout */
 
 .plans {
+	float: left;
 	display: inline-block;
 	margin: 0;
 	padding: 0;
 	width: 50%;
+	&:after {
+		content: "";
+		display: table;
+		clear: both;
+	}
 }
 
 
