--- a/stylesheets/scss/_variables.scss
+++ b/stylesheets/scss/_variables.scss
@@ -35,6 +35,8 @@ $c-orange:              #C60;
 
 $c-blue-light:          #E1F1FA;
 
+$c-grey:                #CCC;
+
 $c-good:                #0F7C14;
 $c-bad:                 #B00;
 
