--- a/stylesheets/global.css
+++ b/stylesheets/global.css
@@ -735,7 +735,7 @@ footer #help small,
   .plans h1 {
     font-size: 1.2em;
     font-weight: normal;
-    margin: 0 10px 10px; }
+    margin: 0 10px 40px; }
   .plans:after {
     content: "";
     display: table;
@@ -746,6 +746,7 @@ footer #help small,
   width: 33.33%; }
 
 .plan {
+  background-color: #FFFFFF;
   margin-right: -1px;
   border: 1px solid #cccccc;
   padding: 0 10px 10px; }
@@ -761,13 +762,51 @@ footer #help small,
   display: block;
   clear: both; }
 
-/* Plan Labels */
 #pricing-new {
+  /* Plans header */
+  /* Plan Labels */
   /* 15-day Guarantee Ribbon */
   /* Referral notice */
   /* FAQ */
-  /* Page title */
   /* Features List */ }
+  #pricing-new .plans-head {
+    position: relative;
+    text-align: center;
+    background: #e2f7cd url(../images/bg-page-pattern.png) no-repeat 50% -11px;
+    height: 180px;
+    padding: 40px 0 0; }
+    #pricing-new .plans-head h1 {
+      margin: 0 0.2em;
+      padding: 0;
+      color: #064;
+      text-shadow: 0 1px 1px #FFF;
+      -webkit-font-smoothing: antialiased;
+      font-size: 30px;
+      font-weight: normal; }
+    #pricing-new .plans-head h2 {
+      margin: 0;
+      padding: 0;
+      color: #6A8066;
+      font-weight: normal;
+      font-size: 1.15em; }
+      #pricing-new .plans-head h2 a {
+        color: #389458; }
+  #pricing-new .page.top {
+    margin-top: -40px;
+    background-color: #FFF;
+    background-position: 50% -197px;
+    position: relative;
+    padding: 0;
+    width: 100%;
+    -webkit-border-top-left-radius: 23px;
+    -webkit-border-top-right-radius: 23px;
+    -moz-border-radius-topleft: 23px;
+    -moz-border-radius-topright: 23px;
+    border-top-left-radius: 23px;
+    border-top-right-radius: 23px; }
+  #pricing-new .plans-lineup {
+    position: relative;
+    top: -40px; }
   #pricing-new .free,
   #pricing-new .bronze,
   #pricing-new .silver,
@@ -982,26 +1021,6 @@ footer #help small,
       margin: 0 0 1em;
       color: #888;
       line-height: 1.5; }
-  #pricing-new .page-title {
-    margin: 35px 0 25px;
-    overflow: hidden; }
-    #pricing-new .page-title h1,
-    #pricing-new .page-title h2 {
-      margin: 0;
-      border: 0;
-      padding: 0;
-      text-align: center; }
-    #pricing-new .page-title h1 {
-      color: #000;
-      font-size: 30px;
-      font-weight: normal; }
-    #pricing-new .page-title h2 {
-      margin-top: .2em;
-      color: #444;
-      font-weight: normal;
-      font-size: 18px; }
-      #pricing-new .page-title h2 a {
-        color: #389458; }
   #pricing-new .features-list {
     margin: 60px 0 40px;
     color: #222; }
