--- a/stylesheets/global.css
+++ b/stylesheets/global.css
@@ -747,14 +747,22 @@ footer #help small,
 
 .plan {
   background-color: #FFFFFF;
-  margin-right: -1px;
   border: 1px solid #cccccc;
+  margin-right: -1px;
+  color: #8A8A8A;
   padding: 0 10px 10px; }
   .plan .plan-name {
     margin-top: -10px; }
+  .plan .plan-price {
+    text-transform: uppercase; }
+    .plan .plan-price strong {
+      color: #000;
+      font-size: 1.6em;
+      margin-right: 0.1em; }
   .plan ul {
     margin: 0;
-    padding: 0; }
+    padding: 0;
+    min-height: 140px; }
     .plan ul li {
       list-style: none; }
 
@@ -806,7 +814,8 @@ footer #help small,
     border-top-right-radius: 23px; }
   #pricing-new .plans-lineup {
     position: relative;
-    top: -40px; }
+    top: -40px;
+    margin-bottom: -40px; }
   #pricing-new .free,
   #pricing-new .bronze,
   #pricing-new .silver,
