--- a/stylesheets/scss/_pricing.scss
+++ b/stylesheets/scss/_pricing.scss
@@ -32,17 +32,28 @@ $s-pricing-default: 10px;
 
 .plan {
 	background-color: #FFFFFF;
-	margin-right: -1px;
 	border: 1px solid $c-grey;
+	margin-right: -1px;
+	color: #8A8A8A;
 	padding: 0 $s-pricing-default $s-pricing-default;
 
 	.plan-name {
 		margin-top: -$s-pricing-default;
 	}
 
+	.plan-price {
+		text-transform: uppercase;
+		strong {
+			color: #000;
+			font-size: 1.6em;
+			margin-right: 0.1em;
+		}
+	}
+
 	ul {
 		margin: 0;
 		padding: 0;
+		min-height: 140px;
 
 		li {
 			list-style: none;
@@ -111,6 +122,7 @@ $s-pricing-default: 10px;
 	.plans-lineup {
 		position: relative;
 		top: - $header-bleed;
+		margin-bottom: - $header-bleed;
 	}
 
 	/* Plan Labels */
