--- a/stylesheets/global.css
+++ b/stylesheets/global.css
@@ -729,13 +729,13 @@ footer #help small,
 .plans {
   float: left;
   display: inline-block;
-  margin: 0;
+  margin: 0 0 20px;
   padding: 0;
   width: 50%; }
   .plans h1 {
     font-size: 1.2em;
     font-weight: normal;
-    margin: 0 10px 40px; }
+    margin: 0 5px 40px; }
   .plans:after {
     content: "";
     display: table;
@@ -757,7 +757,7 @@ footer #help small,
     text-transform: uppercase; }
     .plan .plan-price strong {
       color: #000;
-      font-size: 1.6em;
+      font-size: 1.7em;
       margin-right: 0.1em; }
   .plan ul {
     margin: 0;
@@ -768,7 +768,8 @@ footer #help small,
 
 .link-custom-plans {
   display: block;
-  clear: both; }
+  clear: both;
+  text-align: center; }
 
 #pricing-new {
   /* Plans header */
@@ -1033,20 +1034,42 @@ footer #help small,
   #pricing-new .features-list {
     margin: 60px 0 40px;
     color: #222; }
+    #pricing-new .features-list:after {
+      content: "";
+      display: table;
+      clear: both; }
+    #pricing-new .features-list .plan-standard {
+      display: inline-block;
+      float: left;
+      width: 55%; }
+      #pricing-new .features-list .plan-standard li {
+        float: left;
+        width: 50%; }
+    #pricing-new .features-list .plan-extra {
+      display: inline-block;
+      float: left;
+      width: 45%; }
+      #pricing-new .features-list .plan-extra h2, #pricing-new .features-list .plan-extra ul {
+        margin-left: 10px; }
     #pricing-new .features-list ul {
-      margin: 0 -10px;
+      margin: 0;
       overflow: hidden; }
       #pricing-new .features-list ul li {
-        float: left;
-        width: 204px;
-        margin: .3em 10px .6em;
-        padding-left: 15px;
-        background: url("../images/i-checkmark-grey.svg") no-repeat 0 0.3em;
-        background-size: 11px 10px;
+        margin: .3em 0 .6em;
+        padding: 0;
         list-style: none; }
-        .no-svg #pricing-new .features-list ul li {
-          background-image: url("../images/i-checkmark-grey.png"); }
-        #pricing-new .features-list ul li.no-bullet {
+        #pricing-new .features-list ul li:before {
+          content: url("../images/i-checkmark-grey.svg");
+          margin-right: 4px;
+          width: 11px;
+          height: 10px;
+          display: inline-block; }
+        #pricing-new .features-list ul li.no-svg:before {
+          content: url("../images/i-checkmark-grey.png"); }
+        #pricing-new .features-list ul li.no-bullet:before {
+          content: "";
+          width: 0;
+          height: 0;
           padding-left: 0;
           background-image: none; }
 
