--- a/stylesheets/scss/_pricing.scss
+++ b/stylesheets/scss/_pricing.scss
@@ -8,14 +8,14 @@ $s-pricing-default: 10px;
 .plans {
 	float: left;
 	display: inline-block;
-	margin: 0;
+	margin: 0 0 $s-pricing-default * 2;
 	padding: 0;
 	width: 50%;
 
 	h1 {
 		font-size: 1.2em;
 		font-weight: normal;
-		margin: 0 $s-pricing-default $s-pricing-default * 4;
+		margin: 0 $s-pricing-default / 2 $s-pricing-default * 4;
 	}
 
 	&:after {
@@ -45,7 +45,7 @@ $s-pricing-default: 10px;
 		text-transform: uppercase;
 		strong {
 			color: #000;
-			font-size: 1.6em;
+			font-size: 1.7em;
 			margin-right: 0.1em;
 		}
 	}
@@ -64,6 +64,7 @@ $s-pricing-default: 10px;
 .link-custom-plans {
 	display: block;
 	clear: both;
+	text-align: center;
 }
 
 #pricing-new {
@@ -323,24 +324,56 @@ $s-pricing-default: 10px;
 		margin: 60px 0 40px;
 		color: #222;
 
+		&:after {
+			content: "";
+			display: table;
+			clear: both;
+		}
+
+		.plan-standard {
+			display: inline-block;
+			float: left;
+			width: 55%;
+			li {
+				float: left;
+				width: 50%;
+			}
+		}
+
+		.plan-extra {
+			display: inline-block;
+			float: left;
+			width: 45%;
+			h2, ul {
+				margin-left: $s-pricing-default;
+			}
+		}
+
 		ul {
-			margin: 0 -10px;
+			margin: 0;
 			overflow: hidden;
 
 			li {
-				float: left;
-				width: 204px;
-				margin: .3em 10px .6em;
-				padding-left: 15px;
-				background: url('../images/i-checkmark-grey.svg') no-repeat 0 .3em;
-				background-size: 11px 10px;
+				margin: .3em 0 .6em;
+				padding: 0;
 				list-style: none;
 
-				.no-svg & {
-					background-image: url('../images/i-checkmark-grey.png');
+				&:before {
+					content: url('../images/i-checkmark-grey.svg');
+					margin-right: 4px;
+					width: 11px;
+					height: 10px;
+					display: inline-block;
 				}
 
-				&.no-bullet {
+				&.no-svg:before {
+					content: url('../images/i-checkmark-grey.png');
+				}
+
+				&.no-bullet:before {
+					content: "";
+					width: 0;
+					height: 0;
 					padding-left: 0;
 					background-image: none;
 				}
