--- a/stylesheets/scss/_pricing.scss
+++ b/stylesheets/scss/_pricing.scss
@@ -120,10 +120,10 @@ $s-pricing-default: 10px;
 		border-top-right-radius: $container-radius;
 	}
 
-	.plans-lineup {
+	.container {
 		position: relative;
-		top: - $header-bleed;
-		margin-bottom: - $header-bleed;
+		top: -30px;
+		margin-bottom: -30px;
 	}
 
 	/* Plan Labels */
@@ -277,15 +277,17 @@ $s-pricing-default: 10px;
 /* Referral notice */
 
 .referral-notice {
-	margin: -10px 0 0;
+	margin: 20px 0;
 	padding: 0;
 	text-align: center;
 
 	strong {
 		display: inline-block;
 		padding: .6em 1.5em .75em;
-		@include border-radius(0 0 3px 3px);
+		@include border-radius(3px);
+		@include box-shadow(0 1px 2px rgba(0, 0, 0, .4));
 		background-color: #FFEE66;
+		border: 1px solid lighten(#FFEE66, 10%);
 		color: #4D4636;
 		font-weight: bold;
 		font-size: 1.1em;
