--- a/stylesheets/global.css
+++ b/stylesheets/global.css
@@ -732,14 +732,16 @@ footer #help small,
   margin: 0 0 20px;
   padding: 0;
   width: 50%; }
+  .plans:after {
+    content: ".";
+    display: block;
+    height: 0;
+    clear: both;
+    visibility: hidden; }
   .plans h1 {
     font-size: 1.2em;
     font-weight: normal;
     margin: 0 5px 40px; }
-  .plans:after {
-    content: "";
-    display: table;
-    clear: both; }
 
 .plan-wrap {
   float: left;
@@ -1039,9 +1041,11 @@ footer #help small,
     margin: 60px 0 40px;
     color: #222; }
     #pricing-new .features-list:after {
-      content: "";
-      display: table;
-      clear: both; }
+      content: ".";
+      display: block;
+      height: 0;
+      clear: both;
+      visibility: hidden; }
     #pricing-new .features-list .plan-standard {
       display: inline-block;
       float: left;
