--- a/stylesheets/scss/_mixins.scss
+++ b/stylesheets/scss/_mixins.scss
@@ -1,3 +1,15 @@
+// Clearfix
+
+@mixin clearfix {
+  &:after {
+    content: ".";
+    display: block;
+    height: 0;
+    clear: both;
+    visibility: hidden;
+  }
+}
+
 // Text size adjust
 
 @mixin text-size-adjust($tsa) {
