--- a/stylesheets/global.css
+++ b/stylesheets/global.css
@@ -1024,14 +1024,13 @@ footer #help small,
     overflow: hidden; }
     #pricing-new #faq .column {
       float: left;
-      width: 450px;
-      margin: 0 20px; }
+      width: 50%; }
     #pricing-new #faq h2 {
-      margin: 2em 0 .25em;
+      margin: 2em 20px .25em;
       color: #444;
       font-size: 1.1em; }
     #pricing-new #faq p {
-      margin: 0 0 1em;
+      margin: 0 20px 1em;
       color: #888;
       line-height: 1.5; }
   #pricing-new .features-list {
