--- a/stylesheets/scss/_pricing.scss
+++ b/stylesheets/scss/_pricing.scss
@@ -296,16 +296,16 @@ $s-pricing-default: 10px;
 
 	.column {
 		float: left;
-		width: 450px;
-		margin: 0 20px;
+		width: 50%;
 	}
+	
 		h2 {
-			margin: 2em 0 .25em;
+			margin: 2em 20px .25em;
 			color: #444;
 			font-size: 1.1em;
 		}
 		p {
-			margin: 0 0 1em;
+			margin: 0 20px 1em;
 			color: #888;
 			line-height: 1.5;
 		}
