--- a/stylesheets/global.css
+++ b/stylesheets/global.css
@@ -727,6 +727,7 @@ footer #help small,
 ============================== */
 /* Plans layout */
 .plans {
+  position: relative;
   float: left;
   display: inline-block;
   margin: 0 0 20px;
@@ -742,6 +743,26 @@ footer #help small,
     font-size: 1.2em;
     font-weight: normal;
     margin: 0 5px 20px; }
+  .plans.plans-personal .plan {
+    background-color: #f3faf4; }
+  .plans.plans-personal:before {
+    content: url(../images/leaf-ls.png);
+    position: absolute;
+    display: block;
+    width: 48px;
+    height: 75px;
+    left: -48px;
+    bottom: 40px; }
+  .plans.plans-business .plan {
+    background-color: #e8f5eb; }
+  .plans.plans-business:before {
+    content: url(../images/leaf-rs.png);
+    position: absolute;
+    display: block;
+    width: 32px;
+    height: 94px;
+    right: -32px;
+    top: 70px; }
 
 .plan-wrap {
   float: left;
@@ -761,6 +782,8 @@ footer #help small,
       color: #000;
       font-size: 1.7em;
       margin-right: 0.1em; }
+  .plan strong {
+    color: #899a84; }
   .plan ul {
     margin: 0;
     padding: 0;
