--- a/stylesheets/scss/_pricing.scss
+++ b/stylesheets/scss/_pricing.scss
@@ -1,109 +1,14 @@
 /* Pricing
 ============================== */
 
-/* Plans layout */
-
-$s-pricing-default: 10px;
-
-.plans {
-	position: relative;
-	float: left;
-	display: inline-block;
-	margin: 0 0 $s-pricing-default * 2;
-	padding: 0;
-	width: 50%;
-
-	@include clearfix;
-
-	h1 {
-		font-size: 1.2em;
-		font-weight: normal;
-		margin: 0 $s-pricing-default / 2 $s-pricing-default * 2;
-	}
-
-	&.plans-personal {
-		.plan {
-			background-color: lighten($c-green, 46%);
-		}
-
-		&:before {
-			content: url(../images/leaf-ls.png);
-			position: absolute;
-			display: block;
-			width: 48px;
-			height: 75px;
-			left: -48px;
-			bottom: 40px;
-		}
-	}
-
-	&.plans-business {
-		.plan {
-			background-color: lighten($c-green, 43%)
-		}
-
-		&:before {
-			content: url(../images/leaf-rs.png);
-			position: absolute;
-			display: block;
-			width: 32px;
-			height: 94px;
-			right: -32px;
-			top: 70px;
-		}
-	}
-}
-
-.plan-wrap {
-	float: left;
-	width: 33.33%;
-}
-
-.plan {
-	background-color: #FFFFFF;
-	border: 1px solid $c-grey;
-	margin-right: -1px;
-	color: #8A8A8A;
-	padding: 0 $s-pricing-default $s-pricing-default;
-
-	.plan-name {
-		margin-top: -$s-pricing-default;
-	}
-
-	.plan-price {
-		text-transform: uppercase;
-		strong {
-			color: #000;
-			font-size: 1.7em;
-			margin-right: 0.1em;
-		}
-	}
-
-	strong {
-		color: $c-olive-dark;
-	}
-
-	ul {
-		margin: 0;
-		padding: 0;
-		min-height: 140px;
-
-		li {
-			list-style: none;
-		}
-	}
-}
-
-.link-custom-plans {
-	display: block;
-	clear: both;
-	text-align: center;
-}
-
 #pricing-new {
+	/* Pricing page variables */
+	$s-pricing-default: 10px; // default spacing unit
+
 	$header-height: 400px;
 	$header-padding: 36px;
 	$header-bleed: 130px;
+
 
 	/* Plans header */
 	.plans-head {
@@ -145,6 +50,102 @@ $s-pricing-default: 10px;
 		}
 	}
 
+	/* Plans layout */
+	.plans {
+		position: relative;
+		float: left;
+		display: inline-block;
+		margin: 0 0 $s-pricing-default * 2;
+		padding: 0;
+		width: 50%;
+
+		@include clearfix;
+
+		h1 {
+			font-size: 1.2em;
+			font-weight: normal;
+			margin: 0 $s-pricing-default / 2 $s-pricing-default * 2;
+		}
+
+		&.plans-personal {
+			.plan {
+				background-color: lighten($c-green, 46%);
+			}
+
+			&:before {
+				content: url(../images/leaf-ls.png);
+				position: absolute;
+				display: block;
+				width: 48px;
+				height: 75px;
+				left: -48px;
+				bottom: 40px;
+			}
+		}
+
+		&.plans-business {
+			.plan {
+				background-color: lighten($c-green, 43%)
+			}
+
+			&:before {
+				content: url(../images/leaf-rs.png);
+				position: absolute;
+				display: block;
+				width: 32px;
+				height: 94px;
+				right: -32px;
+				top: 70px;
+			}
+		}
+	}
+
+	.plan-wrap {
+		float: left;
+		width: 33.33%;
+	}
+
+	.plan {
+		background-color: #FFFFFF;
+		border: 1px solid $c-grey;
+		margin-right: -1px;
+		color: #8A8A8A;
+		padding: 0 $s-pricing-default $s-pricing-default;
+
+		.plan-name {
+			margin-top: -$s-pricing-default;
+		}
+
+		.plan-price {
+			text-transform: uppercase;
+			strong {
+				color: #000;
+				font-size: 1.7em;
+				margin-right: 0.1em;
+			}
+		}
+
+		strong {
+			color: $c-olive-dark;
+		}
+
+		ul {
+			margin: 0;
+			padding: 0;
+			min-height: 140px;
+
+			li {
+				list-style: none;
+			}
+		}
+	}
+
+	.link-custom-plans {
+		display: block;
+		clear: both;
+		text-align: center;
+	}
+
 	.page.top {
 		$container-radius: 23px;
 
@@ -165,8 +166,6 @@ $s-pricing-default: 10px;
 			margin-bottom: -$header-bleed;
 		}
 	}
-
-
 
 	/* Plan Labels */
 	.free,
