--- a/stylesheets/scss/_pricing.scss
+++ b/stylesheets/scss/_pricing.scss
@@ -131,8 +131,7 @@
 
 		ul {
 			margin: 0;
-			padding: 0;
-			min-height: 140px;
+			padding: 0 0 $s-pricing-default;
 
 			li {
 				list-style: none;
