--- a/stylesheets/global.css
+++ b/stylesheets/global.css
@@ -762,13 +762,18 @@ footer #help small,
       top: 0;
       left: 50%;
       margin-left: 340px; }
+  #pricing-new .plans-lineup:after {
+    content: ".";
+    display: block;
+    height: 0;
+    clear: both;
+    visibility: hidden; }
   #pricing-new .plans {
     position: relative;
     float: left;
     display: inline-block;
     margin: 0 0 20px;
-    padding: 0;
-    width: 50%; }
+    padding: 0; }
     #pricing-new .plans:after {
       content: ".";
       display: block;
@@ -778,51 +783,66 @@ footer #help small,
     #pricing-new .plans h1 {
       font-size: 1.2em;
       font-weight: normal;
-      margin: 0 5px 20px; }
-    #pricing-new .plans.plans-personal .plan {
-      background-color: #f3faf4; }
-    #pricing-new .plans.plans-personal:before {
-      content: url(../images/leaf-ls.png);
-      position: absolute;
-      display: block;
-      width: 48px;
-      height: 75px;
-      left: -48px;
-      bottom: 40px; }
-    #pricing-new .plans.plans-business .plan {
-      background-color: #e8f5eb; }
-    #pricing-new .plans.plans-business:before {
-      content: url(../images/leaf-rs.png);
-      position: absolute;
-      display: block;
-      width: 32px;
-      height: 94px;
-      right: -32px;
-      top: 70px; }
-  #pricing-new .plan-wrap {
-    float: left;
-    width: 33.33%; }
+      margin: 0 2px 20px; }
+    #pricing-new .plans.plans-personal {
+      width: 42%; }
+      #pricing-new .plans.plans-personal .plan-wrap {
+        float: left;
+        width: 46%; }
+        #pricing-new .plans.plans-personal .plan-wrap.anchor {
+          width: 54%; }
+      #pricing-new .plans.plans-personal:before {
+        content: url(../images/leaf-ls.png);
+        position: absolute;
+        display: block;
+        width: 48px;
+        height: 75px;
+        left: -48px;
+        bottom: 40px; }
+    #pricing-new .plans.plans-business {
+      width: 58%; }
+      #pricing-new .plans.plans-business .plan-wrap {
+        float: left;
+        width: 33.33%; }
+      #pricing-new .plans.plans-business:before {
+        content: url(../images/leaf-rs.png);
+        position: absolute;
+        display: block;
+        width: 32px;
+        height: 94px;
+        right: -32px;
+        top: 70px; }
   #pricing-new .plan {
-    background-color: #FFFFFF;
+    background-color: #e8f5eb;
     border: 1px solid #cccccc;
-    margin-right: -1px;
-    color: #8A8A8A;
+    margin: 20px -1px 20px 0;
+    color: #899a84;
     padding: 0 10px 10px; }
     #pricing-new .plan .plan-name {
       margin-top: -10px; }
     #pricing-new .plan .plan-price {
       text-transform: uppercase; }
       #pricing-new .plan .plan-price strong {
-        color: #000;
-        font-size: 1.7em;
+        font-size: 1.8em;
         margin-right: 0.1em; }
     #pricing-new .plan strong {
-      color: #899a84; }
+      color: #005438; }
     #pricing-new .plan ul {
       margin: 0;
-      padding: 0 0 10px; }
+      padding: 0 0 20px; }
       #pricing-new .plan ul li {
         list-style: none; }
+    #pricing-new .plan.prioritize {
+      background-color: #f3faf4;
+      margin: 0 -1px 0 0;
+      font-size: 1.1rem;
+      position: relative;
+      z-index: 10;
+      -webkit-box-shadow: 0px 0px 2px #51b166;
+      -moz-box-shadow: 0px 0px 2px #51b166;
+      box-shadow: 0px 0px 2px #51b166; }
+      #pricing-new .plan.prioritize .plan-name {
+        margin-top: -18px; }
   #pricing-new .link-custom-plans {
     display: block;
     clear: both;
