--- a/stylesheets/scss/_pricing.scss
+++ b/stylesheets/scss/_pricing.scss
@@ -9,7 +9,6 @@
 	$header-padding: 36px;
 	$header-bleed: 130px;
 
-
 	/* Plans header */
 	.plans-head {
 		position: relative;
@@ -51,25 +50,34 @@
 	}
 
 	/* Plans layout */
+	.plans-lineup {
+		@include clearfix;
+	}
+
 	.plans {
 		position: relative;
 		float: left;
 		display: inline-block;
 		margin: 0 0 $s-pricing-default * 2;
 		padding: 0;
-		width: 50%;
 
 		@include clearfix;
 
 		h1 {
 			font-size: 1.2em;
 			font-weight: normal;
-			margin: 0 $s-pricing-default / 2 $s-pricing-default * 2;
+			margin: 0 2px $s-pricing-default * 2;
 		}
 
 		&.plans-personal {
-			.plan {
-				background-color: lighten($c-green, 46%);
+			width: 42%;
+
+			.plan-wrap {
+				float: left;
+				width: 46%;
+				&.anchor {
+					width: 54%;
+				}
 			}
 
 			&:before {
@@ -84,8 +92,12 @@
 		}
 
 		&.plans-business {
-			.plan {
-				background-color: lighten($c-green, 43%)
+
+			width: 58%;
+
+			.plan-wrap {
+				float: left;
+				width: 33.33%;
 			}
 
 			&:before {
@@ -100,16 +112,11 @@
 		}
 	}
 
-	.plan-wrap {
-		float: left;
-		width: 33.33%;
-	}
-
 	.plan {
-		background-color: #FFFFFF;
+		background-color: lighten($c-green, 43%);
 		border: 1px solid $c-grey;
-		margin-right: -1px;
-		color: #8A8A8A;
+		margin: $s-pricing-default * 2 -1px $s-pricing-default * 2 0;
+		color: $c-olive-dark;
 		padding: 0 $s-pricing-default $s-pricing-default;
 
 		.plan-name {
@@ -119,22 +126,33 @@
 		.plan-price {
 			text-transform: uppercase;
 			strong {
-				color: #000;
-				font-size: 1.7em;
+				font-size: 1.8em;
 				margin-right: 0.1em;
 			}
 		}
 
 		strong {
-			color: $c-olive-dark;
+			color: $c-green-darkest;
 		}
 
 		ul {
 			margin: 0;
-			padding: 0 0 $s-pricing-default;
+			padding: 0 0 $s-pricing-default * 2;
 
 			li {
 				list-style: none;
+			}
+		}
+
+		&.prioritize {
+			background-color: lighten($c-green, 46%);
+			margin: 0 -1px 0 0;
+			font-size: 1.1rem;
+			position: relative;
+			z-index: 10;
+			@include box-shadow(0px 0px 2px $c-green);
+			.plan-name {
+				margin-top: $s-pricing-default * -1.8;
 			}
 		}
 	}
