Increase plan text contrast and change button style

--- a/stylesheets/global.css
+++ b/stylesheets/global.css
@@ -816,7 +816,7 @@ footer #help small,
     background-color: #e8f5eb;
     border: 1px solid #cccccc;
     margin: 20px -1px 20px 0;
-    color: #899a84;
+    color: #3f493c;
     padding: 0 10px 10px; }
     #pricing-new .plan .plan-name {
       margin-top: -10px; }
